styles/base.less
// Base
// -------------------

// Used for global styles
// Or to override certain Atom core styles

// -------------------

body {
  font-size: @font-size;
  color: @text-color;
  background-color: @app-background-color;
}

atom-workspace {
  color: @text-color;
}

atom-panel-container.left,
atom-panel-container.right {
  .atom-dock-resize-handle {
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: 999;
  }
}

atom-panel-container.left {
  box-shadow: 1px 0 0 @mid-color;
  z-index: 3;

  .atom-dock-resize-handle {
    right: 0;
  }
}

atom-panel-container.right {
  box-shadow: -1px 0 0 @mid-color;
  z-index: 2;

  .atom-dock-resize-handle {
    left: 0;
  }
}

atom-panel-container.bottom {
  box-shadow: 0 -1px 0 @mid-color;
  z-index: 1;

  atom-dock {
    box-shadow: 0 -1px 0 @mid-color;
    z-index: 2;
  }

  .atom-dock-resize-handle {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 999;
  }

  .find-and-replace {
    border-top: none;
  }
}

atom-pane-resize-handle.vertical + atom-pane-axis,
atom-pane-resize-handle.vertical + atom-pane {
  border-top: 1px solid @mid-color;

  .is-blurred & {
    border-top: 1px solid fade(@mid-color, 50%);
  }
}

.atom-dock-toggle-button {
  padding: 10px;
  overflow: visible;
  transition: opacity ease 0.3s, transform ease 0.3s;

  &.left {
    width: 56px;
    left: 100%;
    margin-top: -30px;
  }

  &.right {
    width: 56px;
    right: 100%;
    margin-top: -30px;
  }

  &.bottom {
    width: 59px;
    height: 54px;
    bottom: 100%;
  }

  &:not(.atom-dock-toggle-button-visible) .atom-dock-toggle-button-inner.left {
    transform: translateX(-30px) !important;
    pointer-events: none;
    opacity: 0;
  }

  &:not(.atom-dock-toggle-button-visible) .atom-dock-toggle-button-inner.right {
    transform: translateX(30px) !important;
    pointer-events: none;
    opacity: 0;
  }

  &:not(.atom-dock-toggle-button-visible)
    .atom-dock-toggle-button-inner.bottom {
    transform: translateY(30px) !important;
    pointer-events: none;
    opacity: 0;
  }

  .atom-dock-toggle-button-inner {
    width: auto;
    height: 35px;
    background: @mid-color;
    border-radius: 6px;
    border: none;
    box-shadow: inset 0 0 0 1px fade(@white-color, 10%),
      0 2px 8px fade(@black-color, 10%), 0 1px 2px fade(@black-color, 10%),
      0 0 0 1px fade(@black-color, 5%);

    .icon {
      transform: none !important;
      transition: none !important;
      height: 13px;
    }

    &.left {
      left: 10px;
      right: 10px;

      .icon-chevron-left::before {
        content: "";
        width: 16px;
        height: 13px;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13' viewBox='0 0 16 13'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%234B4B4B' fill-rule='nonzero' d='M2,0 L14,0 C15.1045695,0 16,0.8954305 16,2 L16,11 C16,12.1045695 15.1045695,13 14,13 L2,13 C0.8954305,13 0,12.1045695 0,11 L0,2 C0,0.8954305 0.8954305,0 2,0 Z' opacity='.797'/%3E%3Cpath fill='%23E1E1E1' fill-rule='nonzero' d='M5,1 L14,1 C14.5522847,1 15,1.44771525 15,2 L15,11 C15,11.5522847 14.5522847,12 14,12 L5,12 L5,12 L5,1 Z'/%3E%3Cpath fill='%239E9E9E' fill-rule='nonzero' d='M1,1 L4,1 C4.55228475,1 5,1.44771525 5,2 L5,11 C5,11.5522847 4.55228475,12 4,12 L1,12 L1,12 L1,1 Z' transform='matrix(-1 0 0 1 6 0)'/%3E%3Cpolyline stroke='%234B4B4B' stroke-linecap='round' stroke-linejoin='round' points='8.5 8.5 10.5 6.5 8.5 4.5' transform='matrix(-1 0 0 1 19 0)'/%3E%3C/g%3E%3C/svg%3E%0A");
      }
      .icon-chevron-right::before {
        content: "";
        width: 16px;
        height: 13px;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13' viewBox='0 0 16 13'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%234B4B4B' fill-rule='nonzero' d='M2,0 L14,0 C15.1045695,0 16,0.8954305 16,2 L16,11 C16,12.1045695 15.1045695,13 14,13 L2,13 C0.8954305,13 0,12.1045695 0,11 L0,2 C0,0.8954305 0.8954305,0 2,0 Z' opacity='.797'/%3E%3Cpath fill='%23E1E1E1' fill-rule='nonzero' d='M5,1 L14,1 C14.5522847,1 15,1.44771525 15,2 L15,11 C15,11.5522847 14.5522847,12 14,12 L5,12 L5,12 L5,1 Z'/%3E%3Cpath fill='%239E9E9E' fill-rule='nonzero' d='M1,1 L4,1 C4.55228475,1 5,1.44771525 5,2 L5,11 C5,11.5522847 4.55228475,12 4,12 L1,12 L1,12 L1,1 Z' transform='matrix(-1 0 0 1 6 0)'/%3E%3Cpolyline stroke='%234B4B4B' stroke-linecap='round' stroke-linejoin='round' points='8.5 8.5 10.5 6.5 8.5 4.5'/%3E%3C/g%3E%3C/svg%3E%0A");
      }
    }

    &.right {
      left: 10px;
      right: 10px;

      .icon-chevron-left::before {
        content: "";
        width: 16px;
        height: 13px;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13' viewBox='0 0 16 13'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%234B4B4B' fill-rule='nonzero' d='M2,0 L14,0 C15.1045695,0 16,0.8954305 16,2 L16,11 C16,12.1045695 15.1045695,13 14,13 L2,13 C0.8954305,13 0,12.1045695 0,11 L0,2 C0,0.8954305 0.8954305,0 2,0 Z' opacity='.797'/%3E%3Cpath fill='%23E1E1E1' fill-rule='nonzero' d='M1,1 L10,1 C10.5522847,1 11,1.44771525 11,2 L11,11 C11,11.5522847 10.5522847,12 10,12 L1,12 L1,12 L1,1 Z' transform='matrix(-1 0 0 1 12 0)'/%3E%3Cpath fill='%239E9E9E' fill-rule='nonzero' d='M11,1 L14,1 C14.5522847,1 15,1.44771525 15,2 L15,11 C15,11.5522847 14.5522847,12 14,12 L11,12 L11,12 L11,1 Z'/%3E%3Cpolyline stroke='%234B4B4B' stroke-linecap='round' stroke-linejoin='round' points='5.5 8.5 7.5 6.5 5.5 4.5' transform='matrix(-1 0 0 1 13 0)'/%3E%3C/g%3E%3C/svg%3E%0A");
      }
      .icon-chevron-right::before {
        content: "";
        width: 16px;
        height: 13px;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13' viewBox='0 0 16 13'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%234B4B4B' fill-rule='nonzero' d='M2,0 L14,0 C15.1045695,0 16,0.8954305 16,2 L16,11 C16,12.1045695 15.1045695,13 14,13 L2,13 C0.8954305,13 0,12.1045695 0,11 L0,2 C0,0.8954305 0.8954305,0 2,0 Z' opacity='.797'/%3E%3Cpath fill='%23E1E1E1' fill-rule='nonzero' d='M1,1 L10,1 C10.5522847,1 11,1.44771525 11,2 L11,11 C11,11.5522847 10.5522847,12 10,12 L1,12 L1,12 L1,1 Z' transform='matrix(-1 0 0 1 12 0)'/%3E%3Cpath fill='%239E9E9E' fill-rule='nonzero' d='M11,1 L14,1 C14.5522847,1 15,1.44771525 15,2 L15,11 C15,11.5522847 14.5522847,12 14,12 L11,12 L11,12 L11,1 Z'/%3E%3Cpolyline stroke='%234B4B4B' stroke-linecap='round' stroke-linejoin='round' points='5.5 8.5 7.5 6.5 5.5 4.5'/%3E%3C/g%3E%3C/svg%3E%0A");
      }
    }

    &.bottom {
      top: 10px;
      bottom: 10px;
      left: 10px;
      right: 10px;

      .icon-chevron-up::before {
        content: "";
        width: 15px;
        height: 13px;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13' viewBox='0 0 16 13'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%234B4B4B' fill-rule='nonzero' d='M2,0 L13,0 C14.1045695,0 15,0.8954305 15,2 L15,11 C15,12.1045695 14.1045695,13 13,13 L2,13 C0.8954305,13 0,12.1045695 0,11 L0,2 C0,0.8954305 0.8954305,0 2,0 Z' opacity='.797'/%3E%3Cpath fill='%23E1E1E1' fill-rule='nonzero' d='M2,1 L13,1 C13.5522847,1 14,1.44771525 14,2 L14,9 L14,9 L1,9 L1,2 C1,1.44771525 1.44771525,1 2,1 Z'/%3E%3Cpath fill='%239E9E9E' fill-rule='nonzero' d='M1,9 L14,9 L14,11 C14,11.5522847 13.5522847,12 13,12 L2,12 C1.44771525,12 1,11.5522847 1,11 L1,9 L1,9 Z' transform='matrix(-1 0 0 1 15 0)'/%3E%3Cpolyline stroke='%234B4B4B' stroke-linecap='round' stroke-linejoin='round' points='6.5 7.5 8.5 5.5 6.5 3.5' transform='rotate(-90 7.5 5.5)'/%3E%3C/g%3E%3C/svg%3E%0A");
      }
      .icon-chevron-down::before {
        content: "";
        width: 15px;
        height: 13px;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='13' viewBox='0 0 16 13'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%234B4B4B' fill-rule='nonzero' d='M2,0 L13,0 C14.1045695,0 15,0.8954305 15,2 L15,11 C15,12.1045695 14.1045695,13 13,13 L2,13 C0.8954305,13 0,12.1045695 0,11 L0,2 C0,0.8954305 0.8954305,0 2,0 Z' opacity='.797'/%3E%3Cpath fill='%23E1E1E1' fill-rule='nonzero' d='M2,1 L13,1 C13.5522847,1 14,1.44771525 14,2 L14,9 L14,9 L1,9 L1,2 C1,1.44771525 1.44771525,1 2,1 Z'/%3E%3Cpath fill='%239E9E9E' fill-rule='nonzero' d='M1,9 L14,9 L14,11 C14,11.5522847 13.5522847,12 13,12 L2,12 C1.44771525,12 1,11.5522847 1,11 L1,9 L1,9 Z' transform='matrix(-1 0 0 1 15 0)'/%3E%3Cpolyline stroke='%234B4B4B' stroke-linecap='round' stroke-linejoin='round' points='6.5 7.5 8.5 5.5 6.5 3.5' transform='matrix(0 1 1 0 2 -2)'/%3E%3C/g%3E%3C/svg%3E%0A");
      }
    }
  }
}

.hypest-hide-dock-buttons .atom-dock-toggle-button {
  display: none;
}

atom-pane {
  background: @dark-color;
}

.tool-panel {
  background: fade(@mid-color, 40%);
}

.pane-row {
  atom-pane {
    border-left: 1px solid @mid-color;

    &:first-child {
      border-left: none;
    }
  }
}

.about {
  .btn {
    cursor: pointer;
  }
}

.about-updates-box {
  background: @dark-color;
  border: none;
  border-radius: 6px;
  box-shadow: inset 0 0 0 1px fade(@white-color, 10%),
    0 2px 8px fade(@black-color, 10%), 0 1px 1px 1px fade(@black-color, 5%),
    0 0 0 1px fade(@black-color, 5%);
}

.about-auto-updates {
  margin-top: 30px;

  label {
    font-size: 14px;
    font-weight: normal;
  }
}

.about-love {
  .icon {
    position: relative;
    margin: 0 2px;
  }
  .icon.icon-code {
    font-size: 13px;
    top: -2px;
  }

  .icon.icon-heart {
    font-size: 13px;
    top: -2px;
  }

  .icon.icon-logo-github {
    font-size: 14px;
    top: -3px;
  }
}

.about .about-version {
  font-size: 15px;

  + .about-copy-version {
    position: relative;
    top: 1px;
  }
}

.show-more-expand {
  cursor: pointer;
  font-size: 14px;
  margin: 16px 0 0 0;
  background: @darker-color;
  padding: 2px 8px 3px;
  border-radius: 18px;
  transition: background ease 0.2s;

  &:hover {
    background: darken(@darker-color, 5%);
  }
}

.about-atom-io:hover .about-logo {
  color: @blue-color;
}

